--- a/assets/style/buttonDesign.css
+++ b/assets/style/buttonDesign.css
@@ -1,34 +1,14 @@
-#customBtn {
-    display: inline-block;
-    background: white;
-    color: #444;
-    width: 190px;
-    border-radius: 5px;
-    border: thin solid #888;
-    box-shadow: 1px 1px 1px grey;
-    white-space: nowrap;
-}
-#customBtn:hover {
-    cursor: pointer;
-}
-span.label {
-    font-family: serif;
-    font-weight: normal;
-}
-span.icon {
-    background: url('/identity/sign-in/g-normal.png') transparent 5px 50% no-repeat;
-    display: inline-block;
-    vertical-align: middle;
-    width: 42px;
-    height: 42px;
-}
-span.buttonText {
-    display: inline-block;
-    vertical-align: middle;
-    padding-left: 42px;
-    padding-right: 42px;
+.md-button {
+    padding: 0 6px 0 6px;
+    margin: 6px 8px 6px 8px;
+    min-width: 88px;
+    border-radius: 3px;
     font-size: 14px;
-    font-weight: bold;
-    /* Use the Roboto font that is loaded in the <head> */
-    font-family: 'Roboto', sans-serif;
+    text-align: center;
+    text-transform: uppercase;
+    text-decoration:none;
+    font-weight: bold !important;
+    border: none;
+    outline: none;
+    color: white !important;
 }
