--- a/views/calenderEvents.html
+++ b/views/calenderEvents.html
@@ -4,25 +4,19 @@
         <md-content md-colors="{'background': 'default-primary-hue-1'}">
             <div>
                 <div layout="row">
-                    <div flex>
-                        <div class="mainPageEventData" layout="column">
-                            <ul ng-repeat="event in fetchedEvents">
-                           <span>
-                            <li>
-                                <p>{{event.summary}}</p>
-                                <p>Name: {{event.creator.displayName}}</p>
-                                <p>Start: {{event.start.startIso}}</p>
-                                <p>End: {{event.end.endIso}}</p>
-                            </li>
-                           </span>
-                            </ul>
-                        </div>
-                            <div>
-                                <span>
-                                    <md-button class="md-primary md-raised" id="authorize-button"  ng-click="handleAuthClick()">Authorize</md-button>
-                                    <md-button class="md-primary md-raised" id="signout-button"  ng-click="handleSignoutClick()">Sign Out</md-button>
-                                </span>
+                    <div flex="20">
+                        <md-content class="mainPageEventContent" md-colors="{'background': 'default-accent'}">
+                            <md-subheader md-colors="{'background': 'default-primary-hue-2'}" class="md-no-sticky">Booked meetings:
+                                <span><md-button class="md-primary md-raised" id="event-fetcher-button"  ng-click="getCalEvents()">Get Events</md-button></span>
+                            </md-subheader>
+                            <md-list-item id="mainPageEvent" class="md-3-line" ng-repeat="event in fetchedEvents" ng-click="null">
+                            <div class="md-list-item-text" layout="column">
+                                <h3>Name:   {{event.summary}}</h3>
+                                <h4>Starts: {{event.start.startIso}}</h4>
+                                <h4>Ends:   {{event.end.endIso}}</h4>
                             </div>
+                            </md-list-item>
+                        </md-content>
                     </div>
                 </div>
             </div>
