--- a/views/calenderEvents.html
+++ b/views/calenderEvents.html
@@ -1,36 +1,64 @@
 <div ng-app="app">
-
     <div id=mainPageMain>
-        <md-content md-colors="{'background': 'default-primary-hue-1'}">
+        <md-content md-colors="{'background': 'default-primary'}">
             <div>
                 <div layout="row">
                     <div flex="30">
 
                         <md-content class="mainPageEventContent" md-colors="{'background': 'default-accent'}" >
-                            <md-subheader md-colors="{'background': 'default-primary-hue-2'}" class="md-no-sticky">Booked meetings:
-                                <span><md-button class="md-primary md-raised" id="event-fetcher-button"  ng-click="updateCalEvents()">Update Events</md-button></span>
+                            <md-subheader md-colors="{'background': 'default-primary-hue-2'}" class="md-no-sticky" style="text-align: center">
+
+                                    <md-button class="md-primary md-raised" id="event-fetcher-button"  ng-click="updateCalEvents()">Update Events</md-button>
+
                             </md-subheader>
                             <md-virtual-repeat-container id="vertical-container">
-                            <md-list-item id="mainPageEvent" class="md-3-line" md-virtual-repeat="event in fetchedEvents" track by $index ng-click="getCurrentEvent($event, event)">
+                            <md-list-item id="mainPageEvent" class="md-3-line" md-virtual-repeat="event in events" track by $index ng-click="getCurrentEvent($event, event)">
                             <div class="md-list-item-text" layout="column">
                                 <h3>Name:   {{event.summary}}</h3>
-                                <h4>Starts: {{event.start.startIso}}</h4>
-                                <h4>Ends:   {{event.end.endIso}}</h4>
+                                <h4>Starts: {{event.start.dateTime | date: "hh.mm" : currentEvent.start.timeZone}}</h4>
+                                <h4>Ends:   {{event.end.dateTime | date: 'hh.mm' : currentEvent.start.timeZone}}</h4>
+                                <h4>Day:    {{event.start.dateTime | date: 'EEEE' : currentEvent.start.timeZone}}</h4>
                             </div>
                             </md-list-item>
                             </md-virtual-repeat-container>
+                            <md-button class="md-primary md-raised" id="addCalenderEvent" ng-click="createEvent(testEvent)">New Event</md-button>
                         </md-content>
                     </div>
+
+
                     <div class="mainPageCurrentEvent" flex="40" md-colors="{'background': 'default-accent'}">
                         <md-content id="mainPageCurrentEvent" md-colors="{'background': 'default-accent'}">
 
+                            <form class="mainPageNewEvent">
+                            <div layout-gt-xs="row">
+                                <md-input-container class="md-block" flex-gt-sm>
+                                    <label style="color: #FFFFFF">Meeting Title</label>
+                                    <input style="color: #FFFFFF" ng-model="eventTitle">
+                                </md-input-container>
+
+                                <md-input-container class="md-block">
+                                    <label style="color: #FFFFFF">Day</label>
+                                <md-datepicker ng-model="eventStart"></md-datepicker>
+                                </md-input-container>
+                            </div>
+
+                            <div layout-gt-xs="row">
+                                 <md-input-container class="md-block" flex-gt-sm>
+                                    <label style="color: #FFFFFF">Your name</label>
+                                    <input style="color: #FFFFFF" ng-model="eventName">
+                                </md-input-container>
+
+                            </div>
+                            </form>
                                 <h2>{{currentEvent.summary}}</h2>
-                                <h3>{{currentEvent.start.startIso}}</h3>
-                                <h3>{{currentEvent.end.endIso}}</h3>
+                                <h3>{{currentEvent.start.dateTime | date: 'hh.mm' :currentEvent.start.timeZone}}
+                                    {{dash}}
+                                    {{currentEvent.end.dateTime | date: 'hh.mm' :currentEvent.start.timeZone}}</h3>
+                                <h3>{{currentEvent.start.dateTime | date: 'EEEE' :currentEvent.start.timeZone}}</h3>
                             <span>
                                 <md-button id="extendButton" class="md-primary md-raised">Extend</md-button>
                                 <md-button id="endEarlyButton" class="md-primary md-raised">End Early</md-button>
-                                <md-button id="deleteButton" class="md-primary md-raised">Delete</md-button>
+                                <md-button id="deleteButton" class="md-primary md-raised" ng-click="showPrompt($event)">Delete</md-button>
                             </span>
                         </md-content>
                     </div>
